# duo-lang

./: .gitignore  2  404.html  LICENSE  README.md  ]  algebraic-subtyping.cabal  cabal.project  callgetMonoKind  dualsub.cabal  duo-lang.cabal  duolang.cabal  files_i_need.txt  further-reading.html  hie.yaml  index.html  makeInstance.vim  preface.html  prg.txt  print.html  searchindex.js  searchindex.json  stack.yaml
.github/workflows/: ci.yml  devdocs.yml  docs.yml  vscode-plugin-ci.yml  vscode-plugin.yml
app/: Compile.hs  Deps.hs  LSP.hs  Main.hs  Options.hs  Repl.hs  Run.hs  Typecheck.hs
app/LSP/: CodeActionHandler.hs  CompletionHandler.hs  Definition.hs  HoverHandler.hs  JumpToDefHandler.hs  LSP.hs  MegaparsecToLSP.hs
app/Repl/: Options.hs  Repl.hs  Run.hs
bench/: BenchRunner.hs
docs/: .gitignore  Makefile  README.md  book.toml  core.tex  desugaring.tex  spec.tex  syntax.tex
docs/src/: SUMMARY.md  further-reading.md  furtherReading.md  preface.md
duo-lang-desugaring/: README.md  duo-lang-desugaring.cabal
duo-lang-desugaring/src/Errors/: Desugarer.hs
duo-lang-desugaring/src/Sugar/: Core.hs  Desugar.hs
duo-lang-desugaring/src/Syntax/Core/: Annot.hs  Program.hs  Terms.hs
duo-lang-parser/: README.md  duo-lang-parser.cabal
duo-lang-parser/src/: Loc.hs
duo-lang-parser/src/Errors/: Parser.hs
duo-lang-parser/src/Parser/: Definition.hs  Kinds.hs  Lexer.hs  Parser.hs  Program.hs  Terms.hs  Types.hs
duo-lang-parser/src/Syntax/CST/: Kinds.hs  Names.hs  Program.hs  Terms.hs  Types.hs
duo-lang-renamer/: README.md  duo-lang-renamer.cabal
duo-lang-renamer/src/Errors/: Renamer.hs
duo-lang-renamer/src/Resolution/: Definition.hs  Pattern.hs  Program.hs  SymbolTable.hs  Terms.hs  Types.hs  Unresolve.hs
duo-lang-renamer/src/Syntax/: LocallyNameless.hs  NMap.hs
duo-lang-renamer/src/Syntax/RST/: Kinds.hs  Names.hs  Program.hs  Terms.hs  Types.hs
examples/: BinaryTree.duo  Bool.ds  BoolRefinement.ds  BoolRefinement.duo  BoolStructural.ds  BoolStructural.duo  Bug.duo  Callcc.ds  Callcc.duo  Cofunction.ds  Cofunction.duo  Compilertests.duo  ConsumerTest.duo  DeMorgan.duo  F64.ds  F64.duo  F64Refined.duo  Function.ds  Function.duo  HelloWorld.duo  I64.ds  I64.duo  Impossible.ds  KindAnnotations.duo  Linear.ds  LinearLogic.ds  LinearLogic.duo  List.ds  List.duo  ListRefinement.duo  ListStructural.ds  NestedPatternMatch.duo  NestedRecTypes.ds  NestedRecTypesStructural.ds  Numbers.duo  Ord.duo  Parser.ds  Parser.duo  ParserAlt.ds  ParserAlt.duo  (+56 more)
examples-refined/: dnf.ds  prg-ref.ds
examples/ICFP/: Icfp22example.duo  ParsimoniousFilter.duo
examples/icfp/: Icfp22example.duo  ParsimoniousFilter.duo  icfp22example.duo
features/: features.html
installation/: dualsub.html  duo-lang.html  editor-support.html
interdependency-testing/: CHANGELOG.md  interdependency-testing.cabal  stack.yaml
interdependency-testing/src/: DependentTests.hs
language/: commands.html  terms.html  types.html
lib/Codata/: Function.duo
lib/Prim/: F64.duo  I64.duo
specification/: .gitignore
src/: .#Parser.hs  BoundsToAutomaton.hs  Determinize.hs  Errors.hs  Eval.hs  Failure.hs  FlowAnalysis.hs  GenerateConstraints.hs  InferTypes.hs  Lookup.hs  Lookup2.hs  Minimize.hs  Parser.hs  Pretty.hs  SolveConstraints.hs  Subsume.hs  Syntax.hs  Target.hs  TypeTranslation.hs  TypeTranslation2.hs  Utils.hs
src/Driver/: Definition.hs  DepGraph.hs  Driver.hs  Environment.hs  Repl.hs  SymbolTable.hs
src/Driver2/: Definition.hs  DepGraph.hs  Driver.hs  Environment.hs  Repl.hs
src/Dualize/: Dualize.hs  DualizeClone.hs  Program.hs  Terms.hs
src/Eval/: ATerms.hs  Definition.hs  Eval.hs  Primitives.hs  STerms.hs  STermsFocusInv.hs  Substitution.hs  TermSubstitution.hs  Terms.hs  TypeSubstitution.hs
src/Eval2/: Definition.hs  Eval.hs  Primitives.hs
src/Parser/: ATerms.hs  Common.hs  Definition.hs  Kinds.hs  Lexer.hs  Names.hs  Parser.hs  Program.hs  STerms.hs  Terms.hs  Types.hs
src/Pretty/: ATerms.hs  Common.hs  Constraints.hs  Constraints.hs.orig  Errors.hs  Names.hs  Pretty.hs  Program.hs  STerms.hs  Terms.hs  TypeAutomata.hs  Types.hs
src/Renamer/: Definition.hs  Program.hs  SymbolTable.hs  Terms.hs  Types.hs
src/Resolution/: Definition.hs  Pattern.hs  Program.hs  SymbolTable.hs  Terms.hs  Types.hs  UnResolve.hs  Unresolve.hs
src/Sugar/: AST.hs  Core.hs  Desugar.hs  Desugar2.hs  Resugar.hs  TST.hs
src/Syntax/: ATerms.hs  AsymmetricTerm.hs  Common.hs  CommonTerm.hs  Environment.hs  Kinds.hs  LocallyNameless.hs  Primitives.hs  Program.hs  README.md  STerms.hs  SymmetricTerm.hs  Terms.hs  TypeAutomaton.hs  TypeGraph.hs  Types.hs  Utils.hs  Zonking.hs
src/Transformation/: Transformation.hs
src/Translate/: Desugar.hs  Embed.hs  EmbedCore.hs  EmbedRST.hs  EmbedTST.hs  Focusing.hs  Focusing2.hs  ForgetTypes.hs  InsertInstance.hs  Reparse.hs  ResolveType.hs  Translate.hs  TranslateProgram.hs
src/TypeAutomata/: .#Definition.hs  BicliqueDecomp.hs  Definition.hs  Determinize.hs  FlowAnalysis.hs  FromAutomaton.hs  Intersection.hs  Lint.hs  Minimize.hs  RemoveAdmissible.hs  RemoveEpsilon.hs  Simplify.hs  Subsume.hs  ToAutomaton.hs  Utils.hs
src/TypeInference/: AGenerateConstraints.hs  Coalescing.hs  Constraints.hs  Constraints.hs.orig  Derive.hs  Driver.hs  Environment.hs  GenerateConstraints.hs  InferProgram.hs  InferTypes.hs  SGenerateConstraints.hs  SolveConstraints.hs  SolveConstraints.hs.orig  SolveConstraints2.hs
src/Xfunc/: Xfunc.hs
src/Xfunctionalize/: Xfunctionalize.hs
std/Class/: Choice.duo  Default.duo  Eq.duo  NatFoldable.duo  Ord.duo  Read.duo  Show.duo  Summable.duo
std/Codata/: CoMaybe.duo  Function.duo  NegationN.duo  Par.duo  Set.duo  Stream.duo  StreamRefinement.duo  StreamStructural.duo  UnitN.duo  VoidN.duo  With.duo
std/Data/: BinaryTree.duo  Bool.duo  BoolRefinement.duo  BoolStructural.duo  Cofunction.duo  FunCofunNeg.duo  List.duo  (+12 more)
test/: ExampleSpec.hs  SubstitutionSpec.hs  TestRunner.hs  TestUtils.hs
vim-plugin/: README.md  install.sh
vscode-plugin/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
(+321 files in other folders)
