cabal-version:  2.2
name:           algebraic-subtyping
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/ps-tuebingen/algebraic-subtyping-implementation#readme>
homepage:       https://github.com/ps-tuebingen/algebraic-subtyping-implementation#readme
bug-reports:    https://github.com/ps-tuebingen/algebraic-subtyping-implementation/issues
author:         Justus Springer, David Binder, Ingo Skupin
maintainer:     example@example.com
copyright:      2020 Justus Springer, David Binder, Ingo Skupin
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
                   README.md
                   LICENSE

source-repository head
  type: git
  location: https://github.com/ps-tuebingen/algebraic-subtyping-implementation

common shared-build-depends
  build-depends:
      base >=4.7 && <5
    , containers
    , directory
    , filepath
    , fgl >=5.7 && <6
    , graphviz >=2999.20 && < 3000
    , megaparsec
    , mtl
    , prettyprinter >= 1.7 && < 1.8
    , repline >=0.4 && <0.5
    , text >= 1.2 && < 1.3
  default-language:    Haskell2010
  default-extensions:
                     RecordWildCards,
                     NamedFieldPuns,
                     FlexibleContexts,
                     FlexibleInstances,
                     ScopedTypeVariables,
                     RankNTypes,
                     DataKinds,
                     GADTs,
                     KindSignatures,
                     StandaloneDeriving,
                     TypeFamilies

library
  import: shared-build-depends
  exposed-modules:
      Eval.TermSubstitution
      Eval.TypeSubstitution
      Eval.Eval
      GenerateConstraints
      Parser
      Pretty
      SolveConstraints
      Syntax.Terms
      Syntax.Types
      Syntax.TypeGraph
      Syntax.Program
      Syntax.Utils
      TypeAutomata.Determinize
      TypeAutomata.FlowAnalysis
      TypeAutomata.FromAutomaton
      TypeAutomata.Minimize
      TypeAutomata.Subsume
      TypeAutomata.ToAutomaton
      Utils
  other-modules:
      Paths_algebraic_subtyping
  hs-source-dirs:
      src
  ghc-options: -Wall -fwarn-tabs -fno-warn-name-shadowing -fno-warn-orphans -fno-warn-unticked-promoted-constructors

executable simple-exe
  import: shared-build-depends
  main-is: Main.hs
  other-modules:
      Paths_algebraic_subtyping
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs -fno-warn-name-shadowing -fno-warn-orphans -fno-warn-unticked-promoted-constructors
  build-depends:
      algebraic-subtyping

test-suite simple-test
  import: shared-build-depends
  type: exitcode-stdio-1.0
  main-is: TestRunner.hs
  other-modules:
      ExampleSpec
    , Eval.SubstitutionSpec
    , Paths_algebraic_subtyping
    , Spec
    , TestUtils
  hs-source-dirs:
      test
  ghc-options: -Wall -fwarn-tabs -fno-warn-name-shadowing -fno-warn-orphans -fno-warn-unticked-promoted-constructors -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      algebraic-subtyping
    , QuickCheck
    , hspec
