cabal-version:  2.2
name:           dualsub
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/ps-tuebingen/algebraic-subtyping-implementation#readme>
homepage:       https://github.com/ps-tuebingen/algebraic-subtyping-implementation#readme
bug-reports:    https://github.com/ps-tuebingen/algebraic-subtyping-implementation/issues
author:         Justus Springer, David Binder, Ingo Skupin
maintainer:     example@example.com
copyright:      2020 Justus Springer, David Binder, Ingo Skupin
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
                   README.md
                   LICENSE

source-repository head
  type: git
  location: https://github.com/ps-tuebingen/algebraic-subtyping-implementation

common shared-build-depends
  build-depends:
      ansi-terminal
    , base >=4.7 && <5
    , containers
    , data-default
    , directory
    , filepath
    , fgl >=5.7 && <6
    , graphviz >=2999.20 && < 3000
    , haskeline >= 0.8.0.0 && < 0.9
    , megaparsec
    , mtl
    , prettyprinter >= 1.7 && < 1.8
    , repline >=0.4 && <0.5
    , text >= 1.2 && < 1.3
    , unliftio-core
    , sorted-list
  default-language:    Haskell2010
  default-extensions:
                     RecordWildCards,
                     NamedFieldPuns,
                     FlexibleContexts,
                     FlexibleInstances,
                     ScopedTypeVariables,
                     ConstraintKinds,
                     RankNTypes,
                     DataKinds,
                     GADTs,
                     KindSignatures,
                     StandaloneDeriving,
                     TypeFamilies,
                     ViewPatterns,
                     GeneralizedNewtypeDeriving,
                     LambdaCase,
                     DeriveFunctor,
                     OverloadedStrings

library
  import: shared-build-depends
  exposed-modules:
      Errors
      Eval.Eval
      Eval.ATerms
      Eval.STerms
      Lookup
      Parser.ATerms
      Parser.Definition
      Parser.Lexer
      Parser.Parser
      Parser.Program
      Parser.STerms
      Parser.Types
      Pretty.Pretty
      Pretty.Constraints
      Pretty.STerms
      Pretty.ATerms
      Pretty.Types
      Pretty.Program
      Pretty.Errors
      Pretty.TypeAutomata
      Syntax.ATerms
      Syntax.CommonTerm
      Syntax.Types
      Syntax.Program
      Syntax.STerms
      TypeAutomata.Definition
      TypeAutomata.Determinize
      TypeAutomata.FromAutomaton
      TypeAutomata.Lint
      TypeAutomata.Minimize
      TypeAutomata.RemoveEpsilon
      TypeAutomata.RemoveAdmissible
      TypeAutomata.Subsume
      TypeAutomata.ToAutomaton
      TypeInference.Driver
      TypeInference.GenerateConstraints.ATerms
      TypeInference.GenerateConstraints.Definition
      TypeInference.GenerateConstraints.STerms
      TypeInference.SolveConstraints
      Utils
      Translate.Translate
      Translate.TranslateProgram
  other-modules:
      Paths_dualsub
  hs-source-dirs:
      src
  ghc-options:
    -Wall
    -fwarn-tabs
    -fno-warn-name-shadowing
    -fno-warn-orphans
    -fno-warn-unticked-promoted-constructors

executable dualsub
  import: shared-build-depends
  main-is: Main.hs
  other-modules:
      LSP
      LSP.MegaparsecToLSP
      Repl.Repl
      Repl.Options.Compile
      Repl.Options.Let
      Repl.Options.LoadReload
      Repl.Options.SaveGraphs
      Repl.Options.SetUnset
      Repl.Options.Show
      Repl.Options.Simplify
      Repl.Options.Subsume
      Repl.Run
      Paths_dualsub
  hs-source-dirs:
      app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -fwarn-tabs
    -fno-warn-name-shadowing
    -fno-warn-orphans
    -fno-warn-unticked-promoted-constructors
  build-depends:
      dualsub,
      lsp

test-suite dualsub-test
  import: shared-build-depends
  type: exitcode-stdio-1.0
  main-is: TestRunner.hs
  other-modules:
      Eval.SubstSpec
    , Eval.FocusingSpec
    , Translate.TranslateExamplesSpec
    , TypeInference.StaticExamplesSpec
    , TypeInference.FileExamplesSpec
    , TypeInference.FileRefExamplesSpec
    , TypeInference.CounterExampleSpec
    , TypeInference.SubsumptionSpec
    , Eval.SubstitutionSpec
    , Parser.ParserSpec
    , ParserPrettyprinter.ParserPrettyprinterSpec
    , Paths_dualsub
    , Spec
    , TestUtils
  hs-source-dirs:
      test
  ghc-options:
    -Wall
    -fwarn-tabs
    -fno-warn-name-shadowing
    -fno-warn-orphans
    -fno-warn-unticked-promoted-constructors
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      dualsub
    , QuickCheck
    , hspec
