cabal-version:  2.2
name:           dualsub
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/ps-tuebingen/dualsub#readme>
homepage:       https://github.com/ps-tuebingen/dualsub#readme
bug-reports:    https://github.com/ps-tuebingen/dualsub/issues
author:         Justus Springer, David Binder, Ingo Skupin
maintainer:     example@example.com
copyright:      2020 Justus Springer, David Binder, Ingo Skupin
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
                   README.md
                   LICENSE

source-repository head
  type: git
  location: https://github.com/ps-tuebingen/dualsub

common shared-build-depends
  build-depends:
      ansi-terminal
    , base >=4.7 && <5
    , containers
    , data-default
    , directory
    , filepath
    , fgl >=5.7 && <6
    , graphviz >=2999.20 && < 3000
    , haskeline >= 0.8.0.0 && < 0.9
    , megaparsec
    , mtl
    , prettyprinter >= 1.7 && < 1.8
    , repline >=0.4 && <0.5
    , text >= 1.2 && < 1.3
    , unliftio-core
    , sorted-list
    , hslogger
    , unordered-containers
  default-language:    Haskell2010
  default-extensions:
                     RecordWildCards,
                     NamedFieldPuns,
                     FlexibleContexts,
                     FlexibleInstances,
                     ScopedTypeVariables,
                     ConstraintKinds,
                     RankNTypes,
                     DataKinds,
                     GADTs,
                     KindSignatures,
                     StandaloneDeriving,
                     TypeFamilies,
                     ViewPatterns,
                     GeneralizedNewtypeDeriving,
                     LambdaCase,
                     DeriveFunctor,
                     OverloadedStrings,
                     ImportQualifiedPost,
                     ViewPatterns

library
  import: shared-build-depends
  exposed-modules:
      Errors
      Eval.Eval
      Lookup
      Parser.Definition
      Parser.Lexer
      Parser.Parser
      Parser.Program
      Parser.Terms
      Parser.Types
      Pretty.Pretty
      Pretty.Constraints
      Pretty.Terms
      Pretty.Types
      Pretty.Program
      Pretty.Errors
      Pretty.TypeAutomata
      Syntax.AST.Program
      Syntax.AST.Terms
      Syntax.AST.Types
      Syntax.CommonTerm
      Syntax.CST.Program
      Syntax.CST.Terms
      Syntax.CST.Types
      Syntax.Kinds
      Syntax.Lowering.Program
      Syntax.Lowering.Terms
      Syntax.Lowering.Types
      Syntax.Zonking
      TypeAutomata.BicliqueDecomp
      TypeAutomata.Definition
      TypeAutomata.Determinize
      TypeAutomata.FromAutomaton
      TypeAutomata.Lint
      TypeAutomata.Minimize
      TypeAutomata.RemoveEpsilon
      TypeAutomata.RemoveAdmissible
      TypeAutomata.Simplify
      TypeAutomata.Subsume
      TypeAutomata.ToAutomaton
      TypeInference.Coalescing
      TypeInference.Driver
      TypeInference.GenerateConstraints.Definition
      TypeInference.GenerateConstraints.Terms
      TypeInference.SolveConstraints
      TypeInference.Constraints
      TypeTranslation
      Utils
      Translate.Desugar
      Translate.Focusing
      Translate.Reparse
  other-modules:
      Paths_dualsub
  hs-source-dirs:
      src
  ghc-options:
    -Wall
    -fwarn-tabs
    -fno-warn-name-shadowing
    -fno-warn-orphans
    -fno-warn-unticked-promoted-constructors

executable dualsub
  import: shared-build-depends
  main-is: Main.hs
  other-modules:
      Compile
      LSP.LSP
      LSP.Definition
      LSP.CodeActionHandler
      LSP.CompletionHandler
      LSP.HoverHandler
      LSP.MegaparsecToLSP
      Options
      Repl.Repl
      Repl.Options.Let
      Repl.Options.LoadReload
      Repl.Options.SetUnset
      Repl.Options.Show
      Repl.Options.Subsume
      Repl.Options.Quit
      Repl.Run
      Paths_dualsub
  hs-source-dirs:
      app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -fwarn-tabs
    -fno-warn-name-shadowing
    -fno-warn-orphans
    -fno-warn-unticked-promoted-constructors
  build-depends:
      dualsub,
      optparse-applicative,
      lsp,
      gitrev

test-suite dualsub-test
  import: shared-build-depends
  type: exitcode-stdio-1.0
  main-is: TestRunner.hs
  other-modules:
      Translate.TranslateExamplesSpec
    , Translate.FocusingSpec
    , TypeInference.ExamplesSpec
    , TypeInference.SubsumptionSpec
    , Eval.SubstitutionSpec
    , Parser.ParserSpec
    , ParserPrettyprinter.ParserPrettyprinterSpec
    , Paths_dualsub
    , Spec
    , TestUtils
  hs-source-dirs:
      test
  ghc-options:
    -Wall
    -fwarn-tabs
    -fno-warn-name-shadowing
    -fno-warn-orphans
    -fno-warn-unticked-promoted-constructors
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      dualsub
    , QuickCheck
    , hspec
