cabal-version:  2.2
name:           duo-lang
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/duo-lang/duo-lang#readme>
homepage:       https://github.com/duo-lang/duo-lang#readme
bug-reports:    https://github.com/duo-lang/duo-lang/issues
author:         Justus Springer, David Binder, Ingo Skupin
maintainer:     example@example.com
copyright:      2020 Justus Springer, David Binder, Ingo Skupin
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
                   README.md
                   LICENSE

source-repository head
  type: git
  location: https://github.com/duo-lang/duo-lang

common shared-build-depends
  build-depends:
      ansi-terminal
    , base >=4.7 && <5
    , containers
    , data-default
    , diagnose
    , directory
    , filepath
    , fgl >=5.7 && <6
    , graphviz >=2999.20 && < 3000
    , haskeline >= 0.8.0.0 && < 0.9
    , megaparsec
    , mtl
    , prettyprinter >= 1.7 && < 1.8
    , repline >=0.4 && <0.5
    , text >= 1.2 && < 1.3
    , unliftio-core
    , sorted-list
    , hslogger
    , unordered-containers

common app-build-depends
  build-depends:
      optparse-applicative
    , lsp
    , githash

common test-build-depends
  build-depends:
      QuickCheck
    , hspec

common shared-lang-options
  default-language:    Haskell2010
  default-extensions:
                     RecordWildCards,
                     NamedFieldPuns,
                     FlexibleContexts,
                     FlexibleInstances,
                     ScopedTypeVariables,
                     ConstraintKinds,
                     RankNTypes,
                     DataKinds,
                     GADTs,
                     KindSignatures,
                     StandaloneDeriving,
                     TypeFamilies,
                     TypeOperators,
                     ViewPatterns,
                     GeneralizedNewtypeDeriving,
                     LambdaCase,
                     DeriveFunctor,
                     OverloadedStrings,
                     ImportQualifiedPost,
                     ViewPatterns,
                     MultiWayIf,
                     PatternSynonyms

common shared-ghc-opts
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -fwarn-tabs
    -fno-warn-name-shadowing
    -fno-warn-orphans
    -fno-warn-unticked-promoted-constructors

common shared-rts-opts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


library
  import: shared-build-depends
  import: app-build-depends
  import: test-build-depends
  import: shared-lang-options
  import: shared-ghc-opts
  exposed-modules:
      Driver.Definition
      Driver.DepGraph
      Driver.Driver
      Driver.Environment
      Driver.Repl
      Errors
      Eval.Definition
      Eval.Eval
      Eval.Primitives
      Lookup
      Loc
      Parser.Names
      Parser.Definition
      Parser.Kinds
      Parser.Lexer
      Parser.Parser
      Parser.Program
      Parser.Terms
      Parser.Types
      Pretty.Pretty
      Pretty.Common
      Pretty.Constraints
      Pretty.Terms
      Pretty.Types
      Pretty.Program
      Pretty.Errors
      Pretty.TypeAutomata
      Resolution.Definition
      Resolution.Pattern
      Resolution.Program
      Resolution.SymbolTable
      Resolution.Terms
      Resolution.Types
      Dualize.Terms
      Dualize.Program
      Sugar.Desugar
      Sugar.Core
      Sugar.TST
      Syntax.TST.Program
      Syntax.TST.Terms
      Syntax.TST.Types
      Syntax.Core.Annot
      Syntax.Core.Terms
      Syntax.Core.Program
      Syntax.CST.Kinds
      Syntax.CST.Names
      Syntax.CST.Program
      Syntax.CST.Terms
      Syntax.CST.Types
      Syntax.RST.Program
      Syntax.RST.Terms
      Syntax.RST.Types
      Syntax.RST.Names
      TypeAutomata.BicliqueDecomp
      TypeAutomata.Definition
      TypeAutomata.Determinize
      TypeAutomata.FromAutomaton
      TypeAutomata.Lint
      TypeAutomata.Minimize
      TypeAutomata.RemoveEpsilon
      TypeAutomata.RemoveAdmissible
      TypeAutomata.Simplify
      TypeAutomata.Subsume
      TypeAutomata.ToAutomaton
      TypeInference.Coalescing
      TypeInference.GenerateConstraints.Definition
      TypeInference.GenerateConstraints.Primitives
      TypeInference.GenerateConstraints.Terms
      TypeInference.SolveConstraints
      TypeInference.Constraints
      TypeTranslation
      Translate.Focusing
      Translate.Reparse
      Translate.Embed
      Utils
  other-modules:
      Paths_duo_lang
  hs-source-dirs:
      src

executable duo
  import: shared-build-depends
  import: app-build-depends
  import: test-build-depends
  import: shared-lang-options
  import: shared-ghc-opts
  import: shared-rts-opts
  main-is: Main.hs
  other-modules:
      Run
      Typecheck
      Deps
      LSP.Definition
      LSP.Handler.CodeAction
      LSP.Handler.Completion
      LSP.Handler.Hover
      LSP.Handler.JumpToDef
      LSP.LSP
      LSP.MegaparsecToLSP
      Options
      Repl.Repl
      Repl.Options.Let
      Repl.Options.LoadReload
      Repl.Options.SetUnset
      Repl.Options.Show
      Repl.Options.Subsume
      Repl.Options.Quit
      Repl.Run
      Paths_duo_lang
  hs-source-dirs:
      app
  build-depends:
      duo-lang,
      optparse-applicative,
      lsp,
      githash

test-suite duo-lang-test
  import: shared-build-depends
  import: app-build-depends
  import: test-build-depends
  import: shared-lang-options
  import: shared-ghc-opts
  import: shared-rts-opts
  type: exitcode-stdio-1.0
  main-is: TestRunner.hs
  other-modules:
      Spec.Focusing
    , Spec.TypeInferenceExamples
    , Spec.LocallyClosed
    , Spec.Prettyprinter
    , Paths_duo_lang
  hs-source-dirs:
      test
  build-depends:
      duo-lang

